2008-01-31  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs,
	  MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Worked on
	  context menu.

2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on bookmark
	  commands.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: AutoInsert template
	  option now works.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: AutoInsert template
	  option now works.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Update MD version.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: AutoInsert template
	  option now works.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Added auto insert
	  bracket option.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Added auto insert
	  bracket option.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Added property change
	  event.

2008-01-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,